k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: restyle
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: restyle
    spec:
      containers:
      - name: restyle
        image: gcr.io/restyle/restyle:0.0.2
        ports:
        - containerPort: 8000
