k8s/test_env_vars_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      #command: [ "/bin/sh", "-c", "echo $(GOOGLE_PROJECT_ID) $(GOOGLE_APPLICATION_CREDENTIALS)" ]
      command: [ "/bin/sh", "-c", "cat /mount-9p/project-up-ed35607315b3.json" ]
  restartPolicy: Never
