k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restyle
  labels:
    app: restyle
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: restyle-service-port
  selector:
    app: restyle
