k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restyle
  labels:
    app: restyle
spec:
  backend:
    serviceName: restyle
    servicePort: 80
